2018-12-17  Markus Gans  <guru.mail@muenster.de>
	* Improve FButton mouse click animation
	* Minor data type corrections

2018-12-15  Markus Gans  <guru.mail@muenster.de>
	* Use of the C++11 auto specifier in the program code
	* Code reduction by using of Range-based for loop
	* The example program for video attributes now replaces 
	  the switch statement with a vector of lambda expressions

2018-12-09  Markus Gans  <guru.mail@muenster.de>
	* Better handling of the scrollbar maximum
	* Deactivate copy constructor and assignment operator with "= delete"
	* Use nullptr instead of 0 to initialize a pointer values

2018-12-06  Markus Gans  <guru.mail@muenster.de>
	* Easier handling of fc::SpecialCharacter

2018-12-01  Markus Gans  <guru.mail@muenster.de>
	* Switched to the language standard C++11
	* Use delegated constructors and in-class default member initializers

2018-12-01  Markus Gans  <guru.mail@muenster.de>
	* Improved gpm wheel mouse support
	* Fix compile in optimization level 2 for newer gcc

2018-11-27  Markus Gans  <guru.mail@muenster.de>
	* Correct vertical scrollbar position after sorting in FListView

2018-11-25  Markus Gans  <guru.mail@muenster.de>
	* Version 0.5.0
	* Namespace fix in FTermFreeBSD and FTermOpenBSD 
	* Fix compiler warning on non-x86 architectures

2018-11-24  Markus Gans  <guru.mail@muenster.de>
	* Improved Sun Microsystems workstation console quirks
	* Handling environment variables with numbers in FTerm
	* Memory management fix in example program transparent

2018-11-21  Markus Gans  <guru.mail@muenster.de>
	* New type FKey for key inputs
	* The integer type of FPoint and FRect changed from short to int

2018-11-18  Markus Gans  <guru.mail@muenster.de>
	* The FListViewItem class now provides checkable list view items
	* Adding the checklist example to demonstrate the checkable 
	  FListViewItems
	* A checkable FListViewItem now shows the input cursor

2018-11-12  Markus Gans  <guru.mail@muenster.de>