@@ -292,8 +292,6 @@ void FButton::onMouseDown (FMouseEvent* ev)
   if ( ! hasFocus() )
   {
     auto focused_widget = getFocusWidget();
-    FFocusEvent out (fc::FocusOut_Event);
-    FApplication::queueEvent(focused_widget, &out);
     setFocus();
 
     if ( focused_widget )
@@ -360,8 +358,6 @@ void FButton::onAccel (FAccelEvent* ev)
 
     if ( focused_widget && focused_widget->isWidget() )
     {
-      FFocusEvent out (fc::FocusOut_Event);
-      FApplication::queueEvent(focused_widget, &out);
       setFocus();
       focused_widget->redraw();
 
