@@ -295,8 +295,6 @@ void FLabel::onMouseDown (FMouseEvent* ev)
   {
     // focus the accelerator widget
     auto focused_widget = getFocusWidget();
-    FFocusEvent out (fc::FocusOut_Event);
-    FApplication::queueEvent(focused_widget, &out);
     accel_widget->setFocus();
 
     if ( focused_widget )
@@ -325,8 +323,6 @@ void FLabel::onAccel (FAccelEvent* ev)
 
     if ( focused_widget && focused_widget->isWidget() )
     {
-      FFocusEvent out (fc::FocusOut_Event);
-      FApplication::queueEvent(focused_widget, &out);
       accel_widget->setFocus();
       focused_widget->redraw();
       accel_widget->redraw();
