@@ -983,8 +983,6 @@ void FListView::onMouseDown (FMouseEvent* ev)
   if ( ! hasFocus() )
   {
     auto focused_widget = getFocusWidget();
-    FFocusEvent out (fc::FocusOut_Event);
-    FApplication::queueEvent(focused_widget, &out);
     setFocus();
 
     if ( focused_widget )
