@@ -240,8 +240,6 @@ void FToggleButton::onMouseDown (FMouseEvent* ev)
     return;
 
   auto focused_widget = getFocusWidget();
-  FFocusEvent out (fc::FocusOut_Event);
-  FApplication::queueEvent(focused_widget, &out);
   setFocus();
 
   if ( focused_widget )
@@ -305,8 +303,6 @@ void FToggleButton::onAccel (FAccelEvent* ev)
 
     if ( focused_widget && focused_widget->isWidget() )
     {
-      FFocusEvent out (fc::FocusOut_Event);
-      FApplication::queueEvent(focused_widget, &out);
       setFocus();
       focused_widget->redraw();
     }
