@@ -1,6 +1,7 @@
 2018-12-17  Markus Gans  <guru.mail@muenster.de>
 	* Improve FButton mouse click animation
 	* Minor data type corrections
+	* Reactivate the event queue
 
 2018-12-15  Markus Gans  <guru.mail@muenster.de>
 	* Use of the C++11 auto specifier in the program code
